[tool.poetry]
name = "pytapo"
version = "3.1.13"
description = "Python library for communication with Tapo Cameras"
authors = ["Juraj Nyíri <juraj.nyiri@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
requests = "^2.22"
urllib3 = "^1.25"
pycryptodome = "^3.8"
rtp = "^0.0.2"
httpx = "^0.24.1"
rich = "^13.4.2"
typer = "^0.9.0"


[tool.poetry.dev-dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
sphinx = "^4.3.2"
coverage = "^6.3.2"
mypy = "^0.930"
bandit = "^1.7.0"
flake8 = "^6.0.0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.5"
mkdocstrings = "^0.22.0"
mock = "^3.0"
pre-commit = "^3.0.4"
black = "^23.1.0"
pycln = "^2.1.3"
isort = "^5.12.0"
mkdocs-build-plantuml-plugin = "^1.7.4"
asynctest = "^0.13.0"
pytest-mock = "^3.11.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Repository" = "https://github.com/JurajNyiri/pytapo"
